# Leandrocx-App

./: .gitignore  CMakeLists.txt  CMakeLists.txt.shared  CMakeUserPresets.json  README.md  filehandler.cpp  filehandler.h  qds.cmake  qtquickcontrols2.conf
App/: filehandler.cpp  main.cpp
App/CNPJ-API/: cnpjhandler.cpp  cnpjhandler.h
App/Model-Handler/: modelhandler.cpp  modelhandler.h
App/filehandler/: filehandler.cpp  filehandler.h
App/texteditor/: texteditor.cpp  texteditor.h
UI/: CMakeLists.txt  LeandrocxUIDesign.qmlproject  LeandrocxUIDesign.qmlproject.qtds  LeandrocxUIDesign.qmlproject.qtds.da9b0be  LeandrocxUIDesign.qrc  LeandrocxUIDesign.qtds  qds.cmake  temp.qrc
UI/App/autogen/: environment.h
UI/LeandrocxUIDesign/: CMakeLists.txt  Constants.qml  qmldir
UI/LeandrocxUIDesign/designer/: plugin.metainfo
UI/LeandrocxUIDesignContent/: App.qml  BaseButton.ui.qml  BaseFileButton.qml  BaseFileButton.ui.qml  CMakeLists.txt  CnpjDialog.qml  ContentScreen.qml  ContentScreen.ui.qml  LeandroButton.qml  Screen01.qml  Screen01.ui.qml  Screen01.ui.qmlfake85673.qmlproject.qtds  Screen02_cnpj.qml  Screen03_Editor.qml  Screen04_Export.qml  SearchBar.qml  SearchBar.ui.qmlfake85673.qmlproject.qtds
